Made structure name and var values configuarble

--- a/conf/plugin.properties
+++ b/conf/plugin.properties
@@ -1,7 +1,11 @@
 ##The default for the reload.force is true.  If it is set to false the properties will only load once from the file.  
 ##After that they will be stored and maintained in the database.  If true every time the server restart the properties
 ##will be cleared and reloaded.
-reload.force  = true
+reload.force = true
 
-## Set the identifier for your shared host if used for sharing common elements between hosts
-sharedHostId  =
+## Set the Structure and Velocity variable name for the resource loader's File Asset structure (DO NOT LEAVE BLANK)
+webResourceName = Web Resource
+webResourceVarName = WebResource
+
+## Set the identifier for your shared host if used for sharing common elements between hosts (Can be blank if not used)
+sharedHostId =
