--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,3 @@
-<project name="Hello World plugin" default="build">	
+<project name="Resource Loader Plugin" default="build">	
 	<import file="../common.xml"/>	
 </project>
