--- a/conf/plugin.properties
+++ b/conf/plugin.properties
@@ -7,5 +7,5 @@ reload.force = true
 webResourceName = Web Resource
 webResourceVarName = WebResource
 
-## Set the identifier for your shared host if used for sharing common elements between hosts (Can be blank if not used)
-sharedHostId =
+## Set the identifier for your shared host if used for sharing common elements between hosts (Uncomment it and give it a value if needed)
+## sharedHostId =
